# scisci-citeevidence-cs-mvp

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
configs/: default.toml  labels.yaml  object_registry_seed.yaml  project.yaml
reports/: acl_citation_graph_alignment_report.md  acl_ocl_data_inspection.md  acl_ocl_schema_id_audit.md  citation_contexts_sectioned_extraction_report.md  citation_marker_resolution_full_report.md  citation_marker_resolution_pilot_baseline.json  citation_marker_resolution_pilot_report.md  citation_marker_resolution_sectioned_pilot_report.md  evidence_backed_object_graph_report.md  final_resolved_context_audit.md  final_scisci_results_report.md  final_scisci_results_report_release.md  final_scisci_results_report_v2.md  full_batch_result_summary.md  full_citations_candidate_coverage_report.md  full_sections_parse_report.md  full_sections_structure_report.md  labeled_dataset_profile.md  manual_resolution_review_report.md  object_matching_report.md  object_matching_sample_final_report.md  object_matching_sample_refined_report.md  object_matching_sample_report.md  object_mentions_llm_review_report.md  object_registry_policy_update_report.md  phase1_citation_function_screening_pilot_refined_report.md  phase1_citation_function_screening_pilot_refined_v2_report.md  phase1_citation_function_screening_pilot_report.md  phase1_citation_function_screening_report.md  phase1_llm_review_report.md  phase1_llm_review_v2_report.md  phase1_rule_refinement_recommendations.md  phase1_rule_refinement_v2_recommendations.md  phase2_batch_cost_estimate.md  (+11 more)
(+159 files in other folders)
